update nancy version

--- a/MZBlog.Web/Web.config
+++ b/MZBlog.Web/Web.config
@@ -4,8 +4,9 @@
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
-  </configSections>
-
+  <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    </sectionGroup></configSections>
   <appSettings>
     <add key="SiteName" value="MZBlog" />
     <add key="SiteHeader" value="MZBlog" />
@@ -14,28 +15,22 @@
     <add key="SiteUrl" value="http://localhost" />
     <add key="EncryptionKey" value="this is the default EncryptionKey" />
     <add key="HmacKey" value="this is the default HmacKey" />
-
     <add key="vs:EnableBrowserLink" value="false" />
-
-    <add key="webPages:Enabled" value="false" />
-  </appSettings>
-
+  <add key="webPages:Enabled" value="false" /></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
-
-      <buildProviders>
+      <assemblies>
+        <add assembly="System.Runtime.Caching, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders>
-    </compilation>
+      </buildProviders></compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
-
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </httpHandlers>
-   
   </system.web>
-
   <location path="content">
     <system.webServer>
       <handlers>
@@ -50,7 +45,6 @@
       </handlers>
     </system.webServer>
   </location>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -59,7 +53,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
@@ -70,11 +63,10 @@
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
   </system.webServer>
-  <system.web.webPages.razor>
+<system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
         <add namespace="Nancy.ViewEngines.Razor" />
       </namespaces>
     </pages>
-  </system.web.webPages.razor>
-</configuration>
+  </system.web.webPages.razor></configuration>
