--- a/MZBlog.Web/MZBlog.Web.csproj
+++ b/MZBlog.Web/MZBlog.Web.csproj
@@ -83,6 +83,81 @@
     <Content Include="content\css\mz-admin.css.map">
       <DependentUpon>mz-admin.css</DependentUpon>
     </Content>
+    <Content Include="content\bootstrap\wells.less" />
+    <Content Include="content\bootstrap\variables.less" />
+    <Content Include="content\bootstrap\utilities.less" />
+    <Content Include="content\bootstrap\type.less" />
+    <Content Include="content\bootstrap\tooltip.less" />
+    <Content Include="content\bootstrap\thumbnails.less" />
+    <Content Include="content\bootstrap\theme.less" />
+    <Content Include="content\bootstrap\tables.less" />
+    <Content Include="content\bootstrap\scaffolding.less" />
+    <Content Include="content\bootstrap\responsive-utilities.less" />
+    <Content Include="content\bootstrap\responsive-embed.less" />
+    <Content Include="content\bootstrap\progress-bars.less" />
+    <Content Include="content\bootstrap\print.less" />
+    <Content Include="content\bootstrap\popovers.less" />
+    <Content Include="content\bootstrap\panels.less" />
+    <Content Include="content\bootstrap\pagination.less" />
+    <Content Include="content\bootstrap\pager.less" />
+    <Content Include="content\bootstrap\normalize.less" />
+    <Content Include="content\bootstrap\navs.less" />
+    <Content Include="content\bootstrap\navbar.less" />
+    <Content Include="content\bootstrap\modals.less" />
+    <Content Include="content\bootstrap\mixins\vendor-prefixes.less" />
+    <Content Include="content\bootstrap\mixins\text-overflow.less" />
+    <Content Include="content\bootstrap\mixins\text-emphasis.less" />
+    <Content Include="content\bootstrap\mixins\table-row.less" />
+    <Content Include="content\bootstrap\mixins\tab-focus.less" />
+    <Content Include="content\bootstrap\mixins\size.less" />
+    <Content Include="content\bootstrap\mixins\responsive-visibility.less" />
+    <Content Include="content\bootstrap\mixins\resize.less" />
+    <Content Include="content\bootstrap\mixins\reset-text.less" />
+    <Content Include="content\bootstrap\mixins\reset-filter.less" />
+    <Content Include="content\bootstrap\mixins\progress-bar.less" />
+    <Content Include="content\bootstrap\mixins\panels.less" />
+    <Content Include="content\bootstrap\mixins\pagination.less" />
+    <Content Include="content\bootstrap\mixins\opacity.less" />
+    <Content Include="content\bootstrap\mixins\nav-vertical-align.less" />
+    <Content Include="content\bootstrap\mixins\nav-divider.less" />
+    <Content Include="content\bootstrap\mixins\list-group.less" />
+    <Content Include="content\bootstrap\mixins\labels.less" />
+    <Content Include="content\bootstrap\mixins\image.less" />
+    <Content Include="content\bootstrap\mixins\hide-text.less" />
+    <Content Include="content\bootstrap\mixins\grid.less" />
+    <Content Include="content\bootstrap\mixins\grid-framework.less" />
+    <Content Include="content\bootstrap\mixins\gradients.less" />
+    <Content Include="content\bootstrap\mixins\forms.less" />
+    <Content Include="content\bootstrap\mixins\clearfix.less" />
+    <Content Include="content\bootstrap\mixins\center-block.less" />
+    <Content Include="content\bootstrap\mixins\buttons.less" />
+    <Content Include="content\bootstrap\mixins\border-radius.less" />
+    <Content Include="content\bootstrap\mixins\background-variant.less" />
+    <Content Include="content\bootstrap\mixins\alerts.less" />
+    <Content Include="content\bootstrap\mixins.less" />
+    <Content Include="content\bootstrap\media.less" />
+    <Content Include="content\bootstrap\list-group.less" />
+    <Content Include="content\bootstrap\labels.less" />
+    <Content Include="content\bootstrap\jumbotron.less" />
+    <Content Include="content\bootstrap\input-groups.less" />
+    <Content Include="content\bootstrap\grid.less" />
+    <Content Include="content\bootstrap\glyphicons.less" />
+    <Content Include="content\bootstrap\forms.less" />
+    <Content Include="content\bootstrap\dropdowns.less" />
+    <Content Include="content\bootstrap\component-animations.less" />
+    <Content Include="content\bootstrap\code.less" />
+    <Content Include="content\bootstrap\close.less" />
+    <Content Include="content\bootstrap\carousel.less" />
+    <Content Include="content\bootstrap\buttons.less" />
+    <Content Include="content\bootstrap\button-groups.less" />
+    <Content Include="content\bootstrap\breadcrumbs.less" />
+    <Content Include="content\bootstrap\bootstrap.less" />
+    <Content Include="content\bootstrap\badges.less" />
+    <Content Include="content\bootstrap\alerts.less" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
     <None Include="content\css\mz-admin.less" />
     <Content Include="content\css\mzblog.css.map">
       <DependentUpon>mzblog.css</DependentUpon>
@@ -139,81 +214,11 @@
     <Content Include="content\fonts\fontawesome-webfont.ttf" />
     <Content Include="content\fonts\fontawesome-webfont.eot" />
     <Content Include="content\fonts\FontAwesome.otf" />
+    <Content Include="content\bootstrap-markdown\bootstrap-markdown.less" />
     <Content Include="content\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="content\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="content\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="content\bootstrap\wells.less" />
-    <Content Include="content\bootstrap\variables.less" />
-    <Content Include="content\bootstrap\utilities.less" />
-    <Content Include="content\bootstrap\type.less" />
-    <Content Include="content\bootstrap\tooltip.less" />
-    <Content Include="content\bootstrap\thumbnails.less" />
-    <Content Include="content\bootstrap\theme.less" />
-    <Content Include="content\bootstrap\tables.less" />
-    <Content Include="content\bootstrap\scaffolding.less" />
-    <Content Include="content\bootstrap\responsive-utilities.less" />
-    <Content Include="content\bootstrap\responsive-embed.less" />
-    <Content Include="content\bootstrap\progress-bars.less" />
-    <Content Include="content\bootstrap\print.less" />
-    <Content Include="content\bootstrap\popovers.less" />
-    <Content Include="content\bootstrap\panels.less" />
-    <Content Include="content\bootstrap\pagination.less" />
-    <Content Include="content\bootstrap\pager.less" />
-    <Content Include="content\bootstrap\normalize.less" />
-    <Content Include="content\bootstrap\navs.less" />
-    <Content Include="content\bootstrap\navbar.less" />
-    <Content Include="content\bootstrap\modals.less" />
-    <Content Include="content\bootstrap\mixins\vendor-prefixes.less" />
-    <Content Include="content\bootstrap\mixins\text-overflow.less" />
-    <Content Include="content\bootstrap\mixins\text-emphasis.less" />
-    <Content Include="content\bootstrap\mixins\table-row.less" />
-    <Content Include="content\bootstrap\mixins\tab-focus.less" />
-    <Content Include="content\bootstrap\mixins\size.less" />
-    <Content Include="content\bootstrap\mixins\responsive-visibility.less" />
-    <Content Include="content\bootstrap\mixins\resize.less" />
-    <Content Include="content\bootstrap\mixins\reset-filter.less" />
-    <Content Include="content\bootstrap\mixins\progress-bar.less" />
-    <Content Include="content\bootstrap\mixins\panels.less" />
-    <Content Include="content\bootstrap\mixins\pagination.less" />
-    <Content Include="content\bootstrap\mixins\opacity.less" />
-    <Content Include="content\bootstrap\mixins\nav-vertical-align.less" />
-    <Content Include="content\bootstrap\mixins\nav-divider.less" />
-    <Content Include="content\bootstrap\mixins\list-group.less" />
-    <Content Include="content\bootstrap\mixins\labels.less" />
-    <Content Include="content\bootstrap\mixins\image.less" />
-    <Content Include="content\bootstrap\mixins\hide-text.less" />
-    <Content Include="content\bootstrap\mixins\grid-framework.less" />
-    <Content Include="content\bootstrap\mixins\grid.less" />
-    <Content Include="content\bootstrap\mixins\gradients.less" />
-    <Content Include="content\bootstrap\mixins\forms.less" />
-    <Content Include="content\bootstrap\mixins\clearfix.less" />
-    <Content Include="content\bootstrap\mixins\center-block.less" />
-    <Content Include="content\bootstrap\mixins\buttons.less" />
-    <Content Include="content\bootstrap\mixins\border-radius.less" />
-    <Content Include="content\bootstrap\mixins\background-variant.less" />
-    <Content Include="content\bootstrap\mixins\alerts.less" />
-    <Content Include="content\bootstrap\mixins.less" />
-    <Content Include="content\bootstrap\media.less" />
-    <Content Include="content\bootstrap\list-group.less" />
-    <Content Include="content\bootstrap\labels.less" />
-    <Content Include="content\bootstrap\jumbotron.less" />
-    <Content Include="content\bootstrap\input-groups.less" />
-    <Content Include="content\bootstrap\grid.less" />
-    <Content Include="content\bootstrap\glyphicons.less" />
-    <Content Include="content\bootstrap\forms.less" />
-    <Content Include="content\bootstrap\dropdowns.less" />
-    <Content Include="content\bootstrap\component-animations.less" />
-    <Content Include="content\bootstrap\code.less" />
-    <Content Include="content\bootstrap\close.less" />
-    <Content Include="content\bootstrap\carousel.less" />
-    <Content Include="content\bootstrap\buttons.less" />
-    <Content Include="content\bootstrap\button-groups.less" />
-    <Content Include="content\bootstrap\breadcrumbs.less" />
-    <Content Include="content\bootstrap\bootstrap.less" />
-    <Content Include="content\bootstrap\badges.less" />
-    <Content Include="content\bootstrap\alerts.less" />
-    <Content Include="content\bootstrap-markdown\bootstrap-markdown.less" />
     <None Include="scripts\jquery-3.1.0.intellisense.js" />
     <Content Include="scripts\jquery-3.1.0.js" />
     <Content Include="scripts\jquery-3.1.0.min.js" />
