--- a/MZBlog.Web/packages.config
+++ b/MZBlog.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap.less" version="3.3.7" targetFramework="net45" />
   <package id="font-awesome" version="4.6.1" targetFramework="net45" />
   <package id="Highlight.js" version="1.0.4" targetFramework="net45" />
   <package id="html5shiv" version="0.1.0.8" targetFramework="net45" />
@@ -15,5 +16,5 @@
   <package id="Nancy.Validation.DataAnnotations" version="1.4.1" targetFramework="net45" />
   <package id="Nancy.Validation.DataAnnotations.Extensions" version="0.3.0" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.4.3" targetFramework="net45" />
-  <package id="Twitter.Bootstrap.Less" version="3.3.4" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.3.6" targetFramework="net45" />
 </packages>
