开始迁移数据库到sqlite

--- a/MZBlog.Web/appsettings.Development.json
+++ b/MZBlog.Web/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "Serilog": {
+      "MinimumLevel": {
+          "Default": "Debug",
+          "Override": {
+              "Microsoft": "Warning",
+              "System": "Warning"
+          }
+      }
   }
 }
