--- a/MZBlog.Core/MZBlog.Core.csproj
+++ b/MZBlog.Core/MZBlog.Core.csproj
@@ -4,11 +4,14 @@
     <RootNamespace>MZBlog.Core</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="iBoxDB" Version="2.17.3.2" />
     <PackageReference Include="Markdig" Version="0.15.7" />
     <PackageReference Include="MediatR" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.2.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
+    <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="packages.config" />
