--- a/MZBlog.Web/MZBlog.Web.csproj
+++ b/MZBlog.Web/MZBlog.Web.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MZBlog.Core\MZBlog.Core.csproj" />
+    <ProjectReference Include="..\IPIPDb\IPIPDb.csproj" />
   </ItemGroup>
 
 </Project>
