--- a/iBoxToSqlite/iBoxToSqlite.csproj
+++ b/iBoxToSqlite/iBoxToSqlite.csproj
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MZBlog.Core\MZBlog.Core.csproj" />
+    <ProjectReference Include="..\IPIPDb\IPIPDb.csproj" />
   </ItemGroup>
 </Project>
