调整Query对象的文件命名

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "cSpell.words": [
         "IPIP",
         "Mediat",
+        "Postgres",
+        "Shouldly",
+        "Xunit",
         "mzblog"
     ]
 }
