--- a/MZBlog.Web/appsettings.Development.json
+++ b/MZBlog.Web/appsettings.Development.json
@@ -3,8 +3,8 @@
       "MinimumLevel": {
           "Default": "Debug",
           "Override": {
-              "Microsoft": "Warning",
-              "System": "Warning"
+              "Microsoft": "Debug",
+              "System": "Debug"
           }
       }
   }
