--- a/MZBlog.Web/Dockerfile
+++ b/MZBlog.Web/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine
+FROM mcr.microsoft.com/dotnet/aspnet:5.0-alpine
 RUN apk add --no-cache tzdata
 ENV TZ Asia/Shanghai
 ARG source
