upgrade to .net 6.0

--- a/MZBlog.Web/Properties/launchSettings.json
+++ b/MZBlog.Web/Properties/launchSettings.json
@@ -18,10 +18,10 @@
     "MZBlog.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "http://localhost:39307",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5800"
+      }
     }
   }
 }
